View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027905 | Open CASCADE | OCCT:Visualization | public | 2016-09-27 08:52 | 2016-12-09 16:38 |
Reporter | abv | Assigned To | apn | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0027905: Visualization - randomly directed arrows on test v3d mesh B7 | ||||
Description | Test v3d mesh B7 produces presentations with arrows directed differently on each run. This indicates instability in the algorithm and should be fixed. See attached image of testdiff command showing typical images for this case. | ||||
Steps To Reproduce | pload ALL vinit vclear mesh3delem m vsetdispmode m 5 meshvectors m -mode elem -maxlen 10 -color green -arrowpart 0.5 -issipmle 0 meshvectors m -mode elem -maxlen 10 -color green -arrowpart 0.5 -issipmle 0 meshvectors m -mode elem -maxlen 10 -color green -arrowpart 0.5 -issipmle 0 Result: Image in 3D view should be the same after each call of meshvectors command. | ||||
Tags | No tags attached. | ||||
Test case number | bugs demo bug27905 | ||||
|
v3d_mesh_b7.png (18,018 bytes) |
|
Branch CR27905 has been created by ski. SHA-1: 0d718b38af70930ba57aa10b331a9783568ae71c Detailed log of new commits: Author: ski Date: Wed Oct 5 11:31:16 2016 +0300 0027905: Visualization - randomly directed arrows on test v3d mesh B7 Behaviour of command meshvectors is stable now. It shows default vector (0,0,1) for volume entity. |
|
Dear san, please review. |
|
Branch CR27905 reviewed without remarks, ready for testing. |
|
Dear ski, could you please rebase branch CR27905 on current master, there are conflict files. |
|
Branch CR27905 has been updated forcibly by ski. SHA-1: b0ad139936be7720729736d5ec27190f3c8f3781 |
|
Done. |
|
Dear BugMaster, Branch CR27905 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms on Release mode. SHA-1: b0ad139936be7720729736d5ec27190f3c8f3781 There are following compilation errors: Linux: http://jenkins-test-07.nnov.opencascade.com:8080/view/CR27905-master/job/CR27905-master-OCCT-Debian70-64-opt-compile/1/parsed_console/ /dn54/builds/CR27905-master/Debian70-64-opt/OCCT/src/XSDRAWSTLVRML/XSDRAWSTLVRML.cxx:1004:1: error: a function-definition is not allowed here before ‘{’ token /dn54/builds/CR27905-master/Debian70-64-opt/OCCT/src/XSDRAWSTLVRML/XSDRAWSTLVRML.cxx:1263:1: error: expected ‘}’ at end of input Windows: http://jenkins-test-07.nnov.opencascade.com:8080/view/CR27905-master/job/CR27905-master-OCCT-Windows-64-VC10-opt-compile/1/parsed_console/ 57>..\..\..\src\XSDRAWSTLVRML\XSDRAWSTLVRML.cxx(1004): error C2267: 'meshtext' : static functions with block scope are illegal 57>..\..\..\src\XSDRAWSTLVRML\XSDRAWSTLVRML.cxx(1004): error C2601: 'meshtext' : local function definitions are illegal 57> ..\..\..\src\XSDRAWSTLVRML\XSDRAWSTLVRML.cxx(866): this line contains a '{' which has not yet been matched 57>..\..\..\src\XSDRAWSTLVRML\XSDRAWSTLVRML.cxx(1044): error C2267: 'meshdeform' : static functions with block scope are illegal 57>..\..\..\src\XSDRAWSTLVRML\XSDRAWSTLVRML.cxx(1044): error C2601: 'meshdeform' : local function definitions are illegal 57> ..\..\..\src\XSDRAWSTLVRML\XSDRAWSTLVRML.cxx(866): this line contains a '{' which has not yet been matched 57>..\..\..\src\XSDRAWSTLVRML\XSDRAWSTLVRML.cxx(1130): error C2267: 'mesh_edge_width' : static functions with block scope are illegal 57>..\..\..\src\XSDRAWSTLVRML\XSDRAWSTLVRML.cxx(1130): error C2601: 'mesh_edge_width' : local function definitions are illegal 57> ..\..\..\src\XSDRAWSTLVRML\XSDRAWSTLVRML.cxx(866): this line contains a '{' which has not yet been matched 57>..\..\..\src\XSDRAWSTLVRML\XSDRAWSTLVRML.cxx(1187): error C2267: 'meshinfo' : static functions with block scope are illegal 57>..\..\..\src\XSDRAWSTLVRML\XSDRAWSTLVRML.cxx(1187): error C2601: 'meshinfo' : local function definitions are illegal 57> ..\..\..\src\XSDRAWSTLVRML\XSDRAWSTLVRML.cxx(866): this line contains a '{' which has not yet been matched 57>..\..\..\src\XSDRAWSTLVRML\XSDRAWSTLVRML.cxx(1217): error C2601: 'XSDRAWSTLVRML::InitCommands' : local function definitions are illegal 57> ..\..\..\src\XSDRAWSTLVRML\XSDRAWSTLVRML.cxx(866): this line contains a '{' which has not yet been matched 57>..\..\..\src\XSDRAWSTLVRML\XSDRAWSTLVRML.cxx(1250): error C2601: 'XSDRAWSTLVRML::Factory' : local function definitions are illegal 57> ..\..\..\src\XSDRAWSTLVRML\XSDRAWSTLVRML.cxx(866): this line contains a '{' which has not yet been matched 57>..\..\..\src\XSDRAWSTLVRML\XSDRAWSTLVRML.cxx(1263): error C2598: linkage specification must be at global scope 57>..\..\..\src\XSDRAWSTLVRML\XSDRAWSTLVRML.cxx(1266): fatal error C1075: end of file found before the left brace '{' at '..\..\..\src\XSDRAWSTLVRML\XSDRAWSTLVRML.cxx(866)' was matched 57> MacOS: http://jenkins-test-07.nnov.opencascade.com:8080/view/CR27905-master/job/CR27905-master-OCCT-MacOS-opt-compile/1/parsed_console/ /Users/mnt/builds/CR27905-master/MacOS-opt/OCCT/src/XSDRAWSTLVRML/XSDRAWSTLVRML.cxx:1004:1: error: function definition is not allowed here { ^ /Users/mnt/builds/CR27905-master/MacOS-opt/OCCT/src/XSDRAWSTLVRML/XSDRAWSTLVRML.cxx:1044:1: error: function definition is not allowed here { ^ /Users/mnt/builds/CR27905-master/MacOS-opt/OCCT/src/XSDRAWSTLVRML/XSDRAWSTLVRML.cxx:1130:1: error: function definition is not allowed here { ^ /Users/mnt/builds/CR27905-master/MacOS-opt/OCCT/src/XSDRAWSTLVRML/XSDRAWSTLVRML.cxx:1187:1: error: function definition is not allowed here { ^ /Users/mnt/builds/CR27905-master/MacOS-opt/OCCT/src/XSDRAWSTLVRML/XSDRAWSTLVRML.cxx:1217:1: error: function definition is not allowed here { ^ /Users/mnt/builds/CR27905-master/MacOS-opt/OCCT/src/XSDRAWSTLVRML/XSDRAWSTLVRML.cxx:1250:1: error: function definition is not allowed here { ^ /Users/mnt/builds/CR27905-master/MacOS-opt/OCCT/src/XSDRAWSTLVRML/XSDRAWSTLVRML.cxx:1263:1: error: expected unqualified-id DPLUGIN(XSDRAWSTLVRML) ^ /Users/mnt/builds/CR27905-master/MacOS-opt/OCCT/src/Draw/Draw_PluginMacro.hxx:20:8: note: expanded from macro 'DPLUGIN' extern "C" {Standard_EXPORT void PLUGINFACTORY(Draw_Interpretor&);} \ ^ /Users/mnt/builds/CR27905-master/MacOS-opt/OCCT/src/XSDRAWSTLVRML/XSDRAWSTLVRML.cxx:1263:1: error: function definition is not allowed here /Users/mnt/builds/CR27905-master/MacOS-opt/OCCT/src/Draw/Draw_PluginMacro.hxx:21:46: note: expanded from macro 'DPLUGIN' void PLUGINFACTORY(Draw_Interpretor& theDI) { \ ^ /Users/mnt/builds/CR27905-master/MacOS-opt/OCCT/src/XSDRAWSTLVRML/XSDRAWSTLVRML.cxx:1264:1: error: expected '}' ^ /Users/mnt/builds/CR27905-master/MacOS-opt/OCCT/src/XSDRAWSTLVRML/XSDRAWSTLVRML.cxx:866:1: note: to match this '{' { ^ |
|
Dear ski, Branch CR27905 has been rejected due to: - compilation errors |
|
Branch CR27905 has been updated forcibly by ski. SHA-1: 4ef50ef2e7d873fca5bf7ad425af2995ce9881c8 |
|
Dear BugMaster, Branch CR27905 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 4ef50ef2e7d873fca5bf7ad425af2995ce9881c8 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 64 (64 on master) Windows: 0 (0 on master) MacOS : 1143 Regressions/Differences/Improvements: No regressions/differences Testing cases: http://occt-tests/CR27905-master-OCCT/Debian70-64/bugs/demo/bug27905.html http://occt-tests/CR27905-master-OCCT/Windows-64-VC10/bugs/demo/bug27905.html bugs demo bug27905: OK Testing on Linux: occt component : Total MEMORY difference: 91113548 / 90543324 [+0.63%] Total CPU difference: 19444.009999999875 / 19276.68999999978 [+0.87%] products component : Total MEMORY difference: 30069223 / 30036359 [+0.11%] Total CPU difference: 5176.929999999985 / 5173.459999999983 [+0.07%] Testing on Windows: occt component : Total MEMORY difference: 57228505 / 57236340 [-0.01%] Total CPU difference: 19242.489348498762 / 18116.099728098634 [+6.22%] products component : Total MEMORY difference: 21274099 / 21238613 [+0.17%] Total CPU difference: 5430.067207899978 / 4976.229098699953 [+9.12%] There are no differences in images found by testdiff. |
|
Branch CR27905 has been updated by mkv. SHA-1: b3aa6ccd8bfd61b07c19b0d1e503babd6b6cfeae Detailed log of new commits: Author: mkv Date: Thu Oct 6 11:28:40 2016 +0300 Test cases for issue CR27905 |
|
Dear BugMaster, Branch CR27905 is TESTED. |
|
Branch CR27905 has been deleted by kgv. SHA-1: b3aa6ccd8bfd61b07c19b0d1e503babd6b6cfeae |
occt: master 90b85826 2016-10-06 09:30:39
Committer: apn Details Diff |
0027905: Visualization - randomly directed arrows on test v3d mesh B7 Behaviour of command meshvectors is stable now. It shows default vector (0,0,1) for volume entity. Test cases for issue CR27905 |
Affected Issues 0027905 |
|
mod - src/XSDRAWSTLVRML/XSDRAWSTLVRML.cxx | Diff File | ||
add - tests/bugs/demo/bug27905 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-09-27 08:52 | abv | New Issue | |
2016-09-27 08:52 | abv | Assigned To | => kgv |
2016-09-27 08:52 | abv | File Added: v3d_mesh_b7.png | |
2016-09-27 08:53 | abv | Summary | Unstable test v3d mesh B7 => Visualization - randomly directed arrows on test v3d mesh B7 |
2016-09-27 11:57 | kgv | Relationship added | related to 0024961 |
2016-09-28 08:47 | kgv | Assigned To | kgv => ski |
2016-09-28 08:47 | kgv | Status | new => assigned |
2016-09-29 12:31 | kgv | Relationship added | related to 0024918 |
2016-10-05 11:49 | git | Note Added: 0058414 | |
2016-10-05 11:54 |
|
Note Added: 0058415 | |
2016-10-05 11:54 |
|
Assigned To | ski => san |
2016-10-05 11:54 |
|
Status | assigned => resolved |
2016-10-05 11:54 |
|
Steps to Reproduce Updated | |
2016-10-05 12:48 | san | Note Added: 0058417 | |
2016-10-05 12:48 | san | Assigned To | san => bugmaster |
2016-10-05 12:48 | san | Status | resolved => reviewed |
2016-10-05 12:54 |
|
Assigned To | bugmaster => mkv |
2016-10-05 13:17 |
|
Note Added: 0058420 | |
2016-10-05 13:17 |
|
Assigned To | mkv => ski |
2016-10-05 13:17 |
|
Status | reviewed => feedback |
2016-10-05 13:45 | git | Note Added: 0058423 | |
2016-10-05 13:47 |
|
Note Added: 0058424 | |
2016-10-05 13:47 |
|
Assigned To | ski => mkv |
2016-10-05 13:47 |
|
Status | feedback => reviewed |
2016-10-05 15:37 |
|
Note Added: 0058433 | |
2016-10-05 15:38 |
|
Note Added: 0058434 | |
2016-10-05 15:38 |
|
Assigned To | mkv => ski |
2016-10-05 15:38 |
|
Status | reviewed => assigned |
2016-10-05 16:08 | git | Note Added: 0058435 | |
2016-10-05 16:15 |
|
Assigned To | ski => mkv |
2016-10-05 16:15 |
|
Status | assigned => feedback |
2016-10-05 16:15 |
|
Status | feedback => reviewed |
2016-10-06 11:41 |
|
Note Added: 0058449 | |
2016-10-06 11:41 | git | Note Added: 0058450 | |
2016-10-06 11:42 |
|
Note Added: 0058451 | |
2016-10-06 11:42 |
|
Assigned To | mkv => bugmaster |
2016-10-06 11:42 |
|
Status | reviewed => tested |
2016-10-06 11:42 |
|
Test case number | => bugs demo bug27905 |
2016-10-07 16:09 | apn | Changeset attached | => occt master 90b85826 |
2016-10-07 16:09 | apn | Assigned To | bugmaster => apn |
2016-10-07 16:09 | apn | Status | tested => verified |
2016-10-07 16:09 | apn | Resolution | open => fixed |
2016-10-28 21:42 | git | Note Added: 0059460 | |
2016-12-09 16:30 |
|
Status | verified => closed |
2016-12-09 16:38 |
|
Fixed in Version | => 7.1.0 |