0027905: Visualization - randomly directed arrows on test v3d mesh B7

Behaviour of command meshvectors is stable now.
It shows default vector (0,0,1) for volume entity.
Test cases for issue CR27905